fix: onfigure modal visibility tab background overflow

--- a/src/generic/configure-modal/ConfigureModal.scss
+++ b/src/generic/configure-modal/ConfigureModal.scss
@@ -4,6 +4,10 @@
     position: static;
   }
 
+  .configure-modal__body {
+    background-color: #fff;
+  }
+
   .react-datepicker-popper {
     z-index: 10;
   }
